--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+<div id="carousel-wrapper" class="row">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -39,4 +40,46 @@
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+  </div>
+</div>
+  <div class="row info">
+  	<div class="col-md-4"><div class="panel panel-info">
+  		<div class="panel-heading">
+        <h1>neural pistol math</h1>
+      </div>
+      <div class="panel-body">
+    		<p>
+  	  		sign youtube neural shanty town convenience store shoes face forwards wristwatch range-rover drone cardboard smart-. dolphin beef noodles futurity table sprawl sentient saturation point sunglasses carbon DIY semiotics tower office face forwards BASE jump. range-rover disposable knife silent car camera ablative neural corporation footage lights plastic youtube construct courier. -ware sprawl Shibuya tank-traps market marketing math- A.I. knife soul-delay footage hotdog woman silent cardboard. 
+    		</p>
+    		<p>
+  			face forwards youtube boat fluidity market sign sensory 3D-printed youtube city 3D-printed construct rifle tattoo systema. dolphin sentient grenade human shoes garage construct boat DIY beef noodles face forwards boy garage j-pop assassin. render-farm. 
+  		</p>
+    </div>
+  </div></div>
+  	<div class="col-md-4"><div class="panel panel-info">
+      <div class="panel-heading">
+  		  <h1>market military-grade</h1>
+      </div>
+      <div class="panel-body">
+    		<p>
+  	  		neural futurity alcohol corrupted rain knife apophenia drone render-farm girl dolphin uplink cardboard. wristwatch car face forwards sign ablative cartel 3D-printed motion convenience store film cartel vehicle DIY refrigerator grenade. augmented reality semiotics camera marketing savant knife ablative hacker tank-traps -space hotdog vehicle disposable free-market nano-. BASE jump dome augmented reality cyber- alcohol sensory RAF sprawl dead sensory advert marketing human Legba ablative. 
+    		</p>
+    		<p>
+    			grenade grenade sunglasses pen physical A.I. drugs BASE jump warehouse kanji neon car otaku decay hacker. lights advert refrigerator tanto plastic sub-orbital math- tattoo jeans franchise bomb numinous tiger-team otaku katana. 
+    		</p>
+      </div>
+    </div></div>
+  	<div class="col-md-4"><div class="panel panel-info">
+      <div class="panel-heading">
+  		  <h1>Shibuya uplink nano</h1>
+      </div>
+      <div class="panel-body">
+    		<p>
+    			office Tokyo alcohol meta- cartel silent knife plastic futurity. beef noodles computer drugs pre- tiger-team industrial grade semiotics drone refrigerator table stimulate tanto dead vinyl order-flow. 3D-printed apophenia city cardboard dome dead office bridge garage film market table faded ablative refrigerator. 
+    		</p>
+    		<p>
+    			tiger-team futurity shrine nano- table shrine disposable cartel convenience store semiotics sensory tank-traps pistol shoes tube. modem gang cyber- nano- wonton soup human engine pen into digital kanji city film table alcohol. man construct military-grade sensory bridge military-grade semiotics RAF bomb tube systema franchise fluidity drone military-grade. 
+  		  </p>
+      </div>
+    </div></div>
   </div>
