--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,13 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-	<header id="page=top">
-		<div class="container">
+<body class="container">
+	<header>
+		<div class="row">
+			<a href="/">
+				<img src="/images/brand.jpg" id="brand" alt ="brand"/>
+			</a>
+			<h1 class="pull-right">Omniclopse</h1>
 			<div class="navbar" role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,19 +33,35 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active">
+                	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">Home</a>
+                </li>
+                <li>
+                	<a href="#about" data-toggle="collapse" data-target=".navbar-collapse">About</a>
+                </li>
+                <li>
+                	<a href="#contact" data-toggle="collapse" data-target=".navbar-collapse">Contact</a>
+                </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li>
+                    	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">Action</a>
+                    </li>
+                    <li>
+                    	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">Another action</a>
+                    </li>
+                    <li>
+                    	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">Something else here</a>
+                    	</li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li>
+                    	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">Separated link</a>
+                    </li>
+                    <li>
+                    	<a href="#" data-toggle="collapse" data-target=".navbar-collapse">One more separated link</a>
+                    </li>
                   </ul>
                 </li>
               </ul>
@@ -50,7 +70,9 @@
 		</div>
 	</header>
 
-    {{{body}}}
+	<section id="main" class="row">
+    	{{{body}}}
+	</section>
 
     <footer>
     </footer>
