--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -74,7 +74,7 @@
     	{{{body}}}
 	</section>
 
-    <footer>
+    <footer class="row">
     </footer>
 
     <script src="/libs/jquery/dist/jquery.min.js"></script>
