--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,6 +33,11 @@ button.navbar-toggle {
 body > header {
   height: 11.6em; }
 
+body > footer {
+  height: 11.6em;
+  color: white;
+  background-color: #767627; }
+
 #main {
   background: #abab61;
   /* The Fallback */
