correct jquery link

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -77,7 +77,7 @@
     <footer class="row">
     </footer>
 
-    <script src="/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/libs/jquery/jquery.min.js"></script>
     <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
