tidy home view and add better error handling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,44 +12,14 @@
       <div class="carousel-inner">
         <% for(var i=0; i<carouselImages.length; i++) {%>
           <div class="item<% if(i==2) { %> active<%}%>">
-            <img src="<%= carouselImage[i].url %>" alt="<%= carouselImage[i].alt %>">
+            <img src="<%= carouselImages[i].url %>" alt="<%= carouselImages[i].alt %>">
             <div class="container">
               <div class="carousel-caption">
-                <%= carouselImage[i].caption %>
+                <%= carouselImages[i].caption %>
               </div>
             </div>
           </div>
         <% } %>
-        <!-- <div class="item">
-          <img src="http://www.fillmurray.com/900/300" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>digital render-farm -space wonton soup nodality neural hacker singularity -space lights boy towards grenade. Legba engine tube nodal point meta- faded warehouse warehouse papier-mache fetishism refrigerator otaku camera.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item active">
-          <img alt="Second slide" src="http://www.placecage.com/900/300">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>refrigerator narrative wristwatch paranoid sunglasses alcohol franchise nano- Tokyo woman katana papier-mache narrative. neon meta- office uplink refrigerator augmented reality into assault gang geodesic futurity boat assault.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="http://www.nicenicejpg.com/900/300">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Shibuya order-flow otaku Chiba sentient chrome singularity j-pop sub-orbital futurity sunglasses Legba rain. sub-orbital -ware sunglasses drone DIY boy sensory alcohol uplink bicycle drone camera neon.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div> -->
       </div>
       <a class="left carousel-control" href="#homeCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#homeCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -66,43 +36,4 @@
     </div>
   </div></div>
     <%}%>
-        <!-- <div class="col-md-4"><div class="panel panel-info">
-      <div class="panel-heading">
-        <h1>neural pistol math</h1>
-      </div>
-      <div class="panel-body">
-        <p>
-          sign youtube neural shanty town convenience store shoes face forwards wristwatch range-rover drone cardboard smart-. dolphin beef noodles futurity table sprawl sentient saturation point sunglasses carbon DIY semiotics tower office face forwards BASE jump. range-rover disposable knife silent car camera ablative neural corporation footage lights plastic youtube construct courier. -ware sprawl Shibuya tank-traps market marketing math- A.I. knife soul-delay footage hotdog woman silent cardboard. 
-        </p>
-        <p>
-        face forwards youtube boat fluidity market sign sensory 3D-printed youtube city 3D-printed construct rifle tattoo systema. dolphin sentient grenade human shoes garage construct boat DIY beef noodles face forwards boy garage j-pop assassin. render-farm. 
-      </p>
-    </div>
-  </div></div>
-  	<div class="col-md-4"><div class="panel panel-info">
-      <div class="panel-heading">
-  		  <h1>market military-grade</h1>
-      </div>
-      <div class="panel-body">
-    		<p>
-  	  		neural futurity alcohol corrupted rain knife apophenia drone render-farm girl dolphin uplink cardboard. wristwatch car face forwards sign ablative cartel 3D-printed motion convenience store film cartel vehicle DIY refrigerator grenade. augmented reality semiotics camera marketing savant knife ablative hacker tank-traps -space hotdog vehicle disposable free-market nano-. BASE jump dome augmented reality cyber- alcohol sensory RAF sprawl dead sensory advert marketing human Legba ablative. 
-    		</p>
-    		<p>
-    			grenade grenade sunglasses pen physical A.I. drugs BASE jump warehouse kanji neon car otaku decay hacker. lights advert refrigerator tanto plastic sub-orbital math- tattoo jeans franchise bomb numinous tiger-team otaku katana. 
-    		</p>
-      </div>
-    </div></div>
-  	<div class="col-md-4"><div class="panel panel-info">
-      <div class="panel-heading">
-  		  <h1>Shibuya uplink nano</h1>
-      </div>
-      <div class="panel-body">
-    		<p>
-    			office Tokyo alcohol meta- cartel silent knife plastic futurity. beef noodles computer drugs pre- tiger-team industrial grade semiotics drone refrigerator table stimulate tanto dead vinyl order-flow. 3D-printed apophenia city cardboard dome dead office bridge garage film market table faded ablative refrigerator. 
-    		</p>
-    		<p>
-    			tiger-team futurity shrine nano- table shrine disposable cartel convenience store semiotics sensory tank-traps pistol shoes tube. modem gang cyber- nano- wonton soup human engine pen into digital kanji city film table alcohol. man construct military-grade sensory bridge military-grade semiotics RAF bomb tube systema franchise fluidity drone military-grade. 
-  		  </p>
-      </div>
-    </div></div> -->
   </div>
