--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,6 +69,9 @@
                     </li>
                   </ul>
                 </li>
+                <li class="pull-right">
+                    <a href="/login">Login</a>
+                </li>
               </ul>
             </div>
           </div>
