--- a/views/layout.html
+++ b/views/layout.html
@@ -81,7 +81,9 @@
           </div>
 		</div>
 	</header>
-
+    <div class="row">
+        <div id="messageHolder" class="col-xs-12"></div>
+    </div> 
 	<section id="main" class="row">
     	{{{body}}}
 	</section>
