--- a/views/layout.html
+++ b/views/layout.html
@@ -81,11 +81,13 @@
           </div>
 		</div>
 	</header>
+    <section id="main">
     <div class="row">
         <div id="messageHolder" class="col-xs-12"></div>
     </div> 
-	<section id="main" class="row">
+	<div class="row">
     	{{{body}}}
+    </div>
 	</section>
 
     <footer class="row">
