--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,7 +57,8 @@ ul.nav.navbar-nav {
   background: #abab61;
   /* The Fallback */
   background: rgba(171, 171, 97, 0.5);
-  padding-top: 15px; }
+  padding-top: 15px;
+  margin: 0 -15px; }
 
 #carousel-wrapper {
   margin: 0; }
