--- a/views/partials/panel.html
+++ b/views/partials/panel.html
@@ -6,7 +6,7 @@
         </h1>
       </div>
       <div class="panel-body" {{elementShouldBeEditable}}>
-  		  {{body}}
+  		  {{safeString body}}
       </div>
     </div>
   </div>
