make editable title a safeString

--- a/views/partials/panel.html
+++ b/views/partials/panel.html
@@ -2,7 +2,7 @@
     <div class="panel panel-info">
 		  <div class="panel-heading">
         <h1 {{elementShouldBeEditable}}>
-          {{title}}
+          {{safeString title}}
         </h1>
       </div>
       <div class="panel-body" {{elementShouldBeEditable}}>
