--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,17 +30,21 @@ button.navbar-toggle {
     -webkit-box-shadow: 0 6px 12px rgba(143, 143, 63, 0.5);
     box-shadow: 0 6px 12px rgba(143, 143, 63, 0.5); }
 
-div[contenteditable]:before {
-  content: "\270f  ";
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-size: 1em; }
+div[contenteditable] {
+  position: relative; }
+  div[contenteditable] .editable-affordance {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 1em; }
 
-h1[contenteditable]:before {
-  content: "\270f  ";
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-size: 0.5em; }
+h1[contenteditable] {
+  position: relative; }
+  h1[contenteditable] .editable-affordance {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 0.5em; }
 
 body header {
   height: 11.6em; }
