--- a/scss/editable.scss
+++ b/scss/editable.scss
@@ -1,14 +1,20 @@
-@mixin editorPencil($size) {
-	content: "\270f  ";
-	font-family: 'Glyphicons Halflings';
-	font-style: normal;
+@mixin editorAffordance($size) {
+	position:absolute;
+    right:0;
+    top:0;
 	font-size: $size;
 }
 
-div[contenteditable]:before {
-	@include editorPencil(1em);
+div[contenteditable] {
+	position:relative;
+	.editable-affordance{
+    	@include editorAffordance(1em);
+	}
 }
 
-h1[contenteditable]:before {
-	@include editorPencil(0.5em);
+h1[contenteditable] {
+	position:relative;
+	.editable-affordance{
+    	@include editorAffordance(0.5em);
+	}
 }
